// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EmailWidget renders an email view widget component 1`] = `
<a
  className="metadata email widget"
  href="mailto:foo@bar.com"
  rel="noopener noreferrer"
>
  foo@bar.com
</a>
`;

exports[`EmailWidget renders an email view widget component with children 1`] = `
<a
  className="metadata email widget"
  href="mailto:foo@bar.com"
  rel="noopener noreferrer"
>
  <strong>
    foo@bar.com
  </strong>
</a>
`;

exports[`EmailWidget renders an empty email view widget component 1`] = `null`;
